--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-click==8.1.3
-torch==2.0.1
-numpy==1.22.3
-stable-baselines3==1.1.0
-gym==0.23.1
-gym-minigrid==1.0.3
-wandb==0.13.0
+click==8.3.1
+torch==2.6.0
+numpy==2.3.5
+stable_baselines3==2.7.0
+gym==0.26.2
+gym_minigrid==1.2.2
+wandb==0.22.2
 psutil==5.9.1
-tensorboard==2.8.0
+tensorboard==2.18.0
+matplotlib==3.10.7
+packaging==25.0
+pandas==2.3.3
 procgen==0.10.7
-envpool==0.7.0
-opencv-python==4.6.0.66
+envpool==0.8.4
+opencv_python==4.11.0.86
